# deribit-api

./: .gitignore  Cargo.toml  README.md
src/: auth.rs  get_index_price.rs  lib.rs  main.rs
src/config/: config_loader.rs  config_model.rs  loader.rs  model.rs
src/domain/: error.rs
src/domain/models/: auth.rs  market.rs
src/domain/ports/: exchange.rs
src/infrastructure/deribit/: client.rs
src/infrastructure/deribit/models/: auth.rs  index_price.rs  jsonrpc.rs  mod.rs
src/models/: auth.rs  index_price.rs  jsonrpc.rs  mod.rs
