[package]
name = "deribit-api"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version ="1.22", features = ["full"] }
anyhow = "1.0.65"
dotenvy = "0.15"
tracing = "0.1.40"
tracing-subscriber = "0.3"
thiserror = "1.0"
async-trait = "0.1"
